--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -17,11 +17,10 @@
     <!-- <button class="btn btn--inverse">More Info & Contact</button> -->
     <ul class="author__urls social-icons">
       <li><div style="white-space: normal; margin-bottom: 1em;">{{ site.description }}</div></li>
-      <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> ruijie.tao@u.nus.edu</a></li>
+      <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> tianchi_liu@u.nus.edu</a></li>
       <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
       <li><a href="https://github.com/{{ author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
       <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
-      <li><a href="https://space.bilibili.com/194466325"><i class="fab fa-fw fa-youtube" aria-hidden="true"></i> Bilibili</a></li>
       
     </ul>
       <div class="author__urls_sm">
