--- a/_layouts/navonly.html
+++ b/_layouts/navonly.html
@@ -1,25 +1,18 @@
----
-layout: null
----
-
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
   </head>
-
   <body>
 
     {% include browser-upgrade.html %}
-    {% include masthead.html %}  
+    {% include masthead.html %}
 
-    <main id="main" role="main" style="padding: 20px;">
+    <main id="main" role="main">
       {{ content }}
     </main>
 
     {% include scripts.html %}
-
   </body>
 </html>
-
