--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -117,5 +117,5 @@ h1, h2, h3, h4, h5, h6,
 p, a, li, span, strong, em,
 blockquote, code, pre, table,
 figcaption, .page__title, .page__meta {
- font-family: "Times New Roman", Times, serif !important;
+ ont-family: Georgia, "Times New Roman", Times, serif !important;
 }
