--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,7 +80,6 @@ del a {
   color: inherit;
 }
 
-
 /* reduce orphans and widows when printing */
 
 p, pre, blockquote, ul, ol, dl, figure, table, fieldset {
@@ -248,26 +247,21 @@ figcaption {
   font-family: $caption-font-family;
   font-size: $type-size-6;
 
-
-a {
-  text-decoration: none;
-  color: #003366; // Dark blue
-
-  &:hover,
-  &:active,
-  &:focus {
+  a {
+    color: inherit;
     text-decoration: none;
-    color: #001f4d; // Slightly darker on hover/focus
-  }
+    border-bottom: 1px solid $light-gray;
+    -webkit-transition: $global-transition;
+    transition: $global-transition;
 
-  &:focus {
-    @extend %tab-focus;
+    &:hover {
+      color: #000;
+      border-bottom-color: #000;
+    }
   }
-
-  outline: 0;
 }
 
-   
+
 /* Fix IE9 SVG bug */
 
 svg:not(:root) {
@@ -303,25 +297,20 @@ nav {
   }
 
   a {
-  text-decoration: none;
-  color: #003366; // Dark blue
-
-  &:hover,
-  &:active,
-  &:focus {
     text-decoration: none;
-    color: #001f4d; // Slightly darker on hover/focus
   }
 
-  &:focus {
-    @extend %tab-focus;
+  /* override white-space for nested lists */
+  ul li,
+  ol li {
+    margin-bottom: 0;
   }
 
-  outline: 0;
+  li ul,
+  li ol {
+    margin-top: 0;
+  }
 }
-
-
-
 
 /*
    Global animation transition
