--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -117,8 +117,9 @@ h1, h2, h3, h4, h5, h6,
 p, a, li, span, strong, em,
 blockquote, code, pre, table,
 figcaption, .page__title, .page__meta {
-  font-family: Georgia, "Times New Roman", Times, serif !important;
-  font-size: 18px !important;  
-  line-height: 1.7;            
+  font-family: "Times New Roman", Times, serif !important;
+  font-size: 18px;
+  line-height: 1.7;
 }
+
 
